# pg-apps

./: .gitignore  CLAUDE.md  index.html  script.js  style.css
.github/scripts/: generate-descriptions.js  package-lock.json  package.json
.github/workflows/: generate-descriptions.yml  update-csv-data.yml  update-sheet-data.yml
data/: paragliding-apps.csv
data/apps/FlyXC/: description.md
data/apps/RASP_Stratus/: description.md
data/apps/XCMap/: description.md
data/apps/XCTrack/: description.md
data/apps/windy/: description.md
data/raw/: fetch_results.json
data/raw/50km_or_Bust/: 50km_or_Bust.google-p-search.json  http_50k_or_bust_com_.html  metadata.json
data/raw/Air3_Recommended_Apps/: Air3_Recommended_Apps.google-p-search.json  https_www_fly_air3_com_en_software_additional_apps_.html  metadata.json
data/raw/Airtribune/: Airtribune.google-p-search.json  https_airtribune_com.html  metadata.json
data/raw/Avia_Weather/: Avia_Weather.google-p-search.json  https_play_google_com_store_apps_details_id_com_mytowntonight_aviationweather.html  metadata.json
data/raw/BHPA_Membership_Card_Online/: BHPA_Membership_Card_Online.google-p-search.json  https_members_bhpa_co_uk_.html  metadata.json
data/raw/CANP/: metadata.json  (+2 more)
process/: helper.js
process/ai-enrich-data/: Dockerfile  README.md  ci.bash  docker-compose.yml  pyproject.toml
process/ai-enrich-data/ai_enrich_data/: main.py
process/fetch-data/: fetch_app_data.js  package-lock.json  package.json
process/fetch-data-go/: .golangci.yml  README.md  go.mod  helper.go  helper_test.go  main.go  run
(+443 files in other folders)
