[tool.poetry]
name = "ai-enrich-data"
version = "0.1.0"
description = "A CLI tool for data enrichment"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.910"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
packages = [{ include = "ai_enrich_data" }]
